Table users {
  id integer [primary key, increment]

  first_name varchar [not null]
  last_name varchar [not null]

  email varchar [not null, unique]
  phone varchar

  role varchar [not null, note: 'student | instructor | manager | admin']

  is_active boolean [not null, default: true]

  created_at timestamp [not null, default: `now()`]
  updated_at timestamp
  deleted_at timestamp

  Indexes {
    role
  }
}

Table user_settings {
  id integer [primary key, increment]
  user_id integer [not null, unique]

  theme_mode varchar [default: 'light']
  language varchar [default: 'pl']

  created_at timestamp [default: `now()`]
  updated_at timestamp
}

Table user_profiles {
  id integer [primary key, increment]
  user_id integer [not null, unique]

  avatar_url varchar
  bio varchar

  created_at timestamp [default: `now()`]
  updated_at timestamp [not null, note: 'Prisma @updatedAt — ostatnia zmiana pól profilu (bio, avatar_url)']
}

Table driving_schools {
  id integer [primary key, increment]

  name varchar [not null]
  city varchar
  address varchar

  owner_id integer [not null]

  created_at timestamp [default: `now()`]
}

Table school_settings {
  id integer [primary key, increment]

  school_id integer [not null, unique]

  working_days_mask integer [not null, default: 62]

  working_hours_start time [not null, default: '08:00']
  working_hours_end time [not null, default: '18:00']

  slot_duration_minutes integer [not null, default: 60]
  slot_must_start_full_hour boolean [not null, default: true]

  practice_min_duration_minutes integer [not null, default: 60]
  practice_max_duration_minutes integer [not null, default: 120]

  theory_min_duration_minutes integer [not null, default: 45]
  theory_max_duration_minutes integer [not null, default: 90]

  booking_max_days_ahead integer [not null, default: 30]

  created_at timestamp [default: `now()`]
  updated_at timestamp
}

Table instructor_profiles {
  id integer [primary key, increment]
  user_id integer [not null, unique]

  license_number varchar [not null]
  experience_years integer

  created_at timestamp [default: `now()`]
}

Table student_profiles {
  id integer [primary key, increment]
  user_id integer [not null, unique]

  pesel varchar [unique]

  created_at timestamp [default: `now()`]
}

Table instructor_schools {
  id integer [primary key, increment]
  instructor_id integer [not null]
  school_id integer [not null]

  created_at timestamp [default: `now()`]

  Indexes {
    (instructor_id, school_id) [unique]
  }
}

Table student_schools {
  id integer [primary key, increment]
  student_id integer [not null]
  school_id integer [not null]

  created_at timestamp [default: `now()`]

  Indexes {
    (student_id, school_id) [unique]
  }
}

Table vehicles {
  id integer [primary key, increment]

  school_id integer [not null]

  brand varchar
  model varchar
  plate_number varchar [unique]

  created_at timestamp [default: `now()`]
}

Table course_types {
  id integer [primary key, increment]

  code varchar [not null, unique]
  name varchar [not null]

  created_at timestamp [default: `now()`]
}

Table courses {
  id integer [primary key, increment]

  student_id integer [not null]
  school_id integer [not null]
  course_type_id integer [not null]

  total_hours integer [not null]
  status varchar [not null, default: 'active']

  created_at timestamp [default: `now()`]
  deleted_at timestamp
}

Table lessons {
  id integer [primary key, increment]

  course_id integer [not null]

  student_id integer [not null]
  instructor_id integer [not null]
  vehicle_id integer

  lesson_type varchar [not null, note: 'theory | practice']

  start_time timestamp [not null]
  end_time timestamp [not null]

  status varchar [not null, default: 'scheduled']

  created_at timestamp [default: `now()`]
  deleted_at timestamp

  Indexes {
    (instructor_id, start_time)
    (vehicle_id, start_time)
    (student_id, start_time)
  }
}

Table instructor_working_hours_default {
  id integer [primary key, increment]

  instructor_id integer [not null]
  day_of_week integer [not null]

  start_time time [not null]
  end_time time [not null]

  created_at timestamp [default: `now()`]
}

Table instructor_working_hours {
  id integer [primary key, increment]

  instructor_id integer [not null]
  date date [not null]

  start_time time
  end_time time

  is_day_off boolean [default: false]

  created_at timestamp [default: `now()`]

  Indexes {
    (instructor_id, date) [unique]
  }
}

Table instructor_time_blocks {
  id integer [primary key, increment]

  instructor_id integer [not null]
  school_id integer

  start_time timestamp [not null]
  end_time timestamp [not null]

  type varchar [not null]

  created_at timestamp [default: `now()`]
}

Table instructor_leaves {
  id integer [primary key, increment]

  instructor_id integer [not null]

  start_date date [not null]
  end_date date [not null]

  created_at timestamp [default: `now()`]
}

Table payment_plans {
  id integer [primary key, increment]

  course_id integer [not null]

  total_amount numeric [not null]
  currency varchar [not null, default: 'PLN']

  type varchar [not null, note: 'full | installments']

  number_of_installments integer

  status varchar [not null, default: 'active']

  created_at timestamp [default: `now()`]
}

Table payments {
  id integer [primary key, increment]

  payment_plan_id integer [not null]

  amount numeric [not null]

  due_date date
  paid_at timestamp

  status varchar [not null, default: 'pending']

  method varchar

  created_at timestamp [default: `now()`]

  Indexes {
    (payment_plan_id, status)
  }
}

Table lesson_ratings {
  id integer [primary key, increment]

  lesson_id integer [not null, unique]

  student_id integer [not null]
  instructor_id integer [not null]

  rating integer [not null]
  comment varchar

  created_at timestamp [default: `now()`]
}

Ref: user_settings.user_id > users.id [delete: cascade]
Ref: user_profiles.user_id > users.id [delete: cascade]

Ref: driving_schools.owner_id > users.id
Ref: school_settings.school_id > driving_schools.id [delete: cascade]

Ref: instructor_profiles.user_id > users.id [delete: cascade]
Ref: student_profiles.user_id > users.id [delete: cascade]

Ref: instructor_schools.instructor_id > instructor_profiles.id [delete: cascade]
Ref: instructor_schools.school_id > driving_schools.id [delete: cascade]

Ref: student_schools.student_id > student_profiles.id [delete: cascade]
Ref: student_schools.school_id > driving_schools.id [delete: cascade]

Ref: vehicles.school_id > driving_schools.id [delete: cascade]

Ref: courses.student_id > student_profiles.id [delete: cascade]
Ref: courses.school_id > driving_schools.id [delete: cascade]
Ref: courses.course_type_id > course_types.id

Ref: lessons.course_id > courses.id [delete: cascade]
Ref: lessons.student_id > student_profiles.id
Ref: lessons.instructor_id > instructor_profiles.id
Ref: lessons.vehicle_id > vehicles.id

Ref: instructor_working_hours_default.instructor_id > instructor_profiles.id [delete: cascade]
Ref: instructor_working_hours.instructor_id > instructor_profiles.id [delete: cascade]

Ref: instructor_time_blocks.instructor_id > instructor_profiles.id [delete: cascade]
Ref: instructor_time_blocks.school_id > driving_schools.id

Ref: instructor_leaves.instructor_id > instructor_profiles.id [delete: cascade]

Ref: payment_plans.course_id > courses.id [delete: cascade]
Ref: payments.payment_plan_id > payment_plans.id [delete: cascade]

Ref: lesson_ratings.lesson_id > lessons.id [delete: cascade]
Ref: lesson_ratings.student_id > student_profiles.id
Ref: lesson_ratings.instructor_id > instructor_profiles.id